<resources>
    <string name="app_name">Ondas Atlantico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Programa Ondas Atlantico</string>
    <string name="nav_header_subtitle">ondasatlnatico@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="nav_adviser">Adviser</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="errorauth">Error auth</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_adviser">Adviser</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_group">Investigation Group</string>
    <string name="invalid_auth">Mail or Password does not match</string>
    <string name="formato_fecha">formato_fecha</string>
    <string name="formato_hora">formato_hora</string>
    <string name="crear_grupo">create group</string>
    <string name="name">name</string>
    <string name="sede">headquarters</string>
    <string name="municipio">municipality</string>
    <string name="save">Save</string>
    <string-array name="tp_visit">
        <item>Selection</item>
        <item>Presential</item>
        <item>Virtual</item>
    </string-array>
    <string-array name="tp_sede">
        <item>Type of headquarters</item>
        <item>Principal</item>
        <item>Assistant</item>
    </string-array>

    <string name="saved_ok">Registry Was Saved Correctly</string>
    <string name="title_activity_group_view">Group List</string>
</resources>
