<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateGroup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="35px"
        android:paddingTop="20px"
        android:paddingRight="35px">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/crear_grupo"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_municipio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/txt_municipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/municipio"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_sede"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/txt_sede"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sede"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#028678"
            android:text="@string/save" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>